# ai-tell-checker

./: .gitignore  README.md  ai-tell-reference.md  custom-gpt-instructions.md  pyproject.toml
ai_tell_checker/: __init__.py  checker.py  cli.py  rules.py
tests/: test_new_rules.py
